Quickly fixes spacing of inline list

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -84,7 +84,7 @@ footer input[type="search"] { width: 100%; font-size: 1em; }
 }
 
 @media screen and (max-width: 415px) {
-  .social-media-list li { display: inline; }
+  .social-media-list li { display: inline; margin-right: 20px; }
   .footer-col-1 { width: calc(100% - (30px / 2)); }
   .footer-col-2 { width: calc(100% - (30px / 2)); }
 }
